src/content/docs/en/sdk/ios/v4/features/deep-links/direct.mdx
---
title: Set up direct deep linking
description: Configure direct deep linking for your app.
slug: en/sdk/ios/v4/features/deep-links/direct
sidebar-position: 2
versions:
   - label: v5
     value: v5
     default: true
   - label: v4
     value: v4
redirects:
   v5: /en/sdk/ios/features/deep-links/direct
---

When a user with your app installed clicks an Adjust link, direct deep linking ensures they're taken directly to specific content within the app.

## Setup {#setup}

iOS provides several methods for receiving direct deep links depending on your app's implementation.

Within these methods, you'll use Adjust's `processDeeplink(_:completionHandler:)` method, which does the following:

- Records attribution from deep link clicks
- Resolves [short branded links](https://help.adjust.com/en/article/short-branded-links) to their long branded link equivalent
- Passes through all other links as is (Adjust long branded links, other universal links, app scheme deep links)

Your app can then handle the resolved link by parsing it and navigating to the appropriate screen.

<CodeBlock title="Method signature">
   
```objc 
+ (void)processDeeplink:(nonnull NSURL *)deeplink
      completionHandler:(void (^_Nonnull)(NSString * _Nonnull resolvedLink))completionHandler;
```

</CodeBlock>

## Important Implementation Notes {#important-implementation-notes}

Follow these deep link handling best practices:

1. **Link Handling Requirements**

   - Your app should treat Adjust branded links (`brandname.go.link`) and universal links (`example.com`) identically when routing users. If your app uses a domain allowlist, ensure your Adjust branded domain is included. For example, both of the following should navigate to the same screen:

      - Adjust branded link: `https://brandname.go.link/summer-clothes?promo=beach`
      - Universal link: `https://example.com/summer-clothes?promo=beach`

   - Your app should treat universal links and app scheme deep links identically when routing users. In cases where iOS doesn't support universal links, Adjust converts them to the equivalent app scheme format. For example, both of the following should navigate to the same screen:
      - Adjust branded link: `https://brandname.go.link/summer-clothes?promo=beach`
      - App scheme deep link: `example://summer-clothes?promo=beach`

2. **App State Considerations**

   - Ensure your app correctly handles links when they open the app from any state: "not running," background, or, if applicable, foreground.
   - Consider storing deep links if they can't be handled immediately, such as when the user isn't yet authenticated, and process them once the app is ready for navigation.

3. **In-App Navigation**
   - When an app tries to open its own universal links by calling `UIApplication.open(_:options:completionHandler:)` or SwiftUI’s `openURL`, iOS opens them in Safari instead of in the app. To navigate internally, use one of two approaches:
      - Universal links. Use your app’s deep link handling logic to parse the links and navigate to the appropriate screen.
      - App scheme deep links. Use these instead of universal links when calling the above iOS methods.

## Implementation {#implementation}

Use the implementation that aligns with your app's structure:

- [UIKit apps using AppDelegate lifecycle](#uikit-apps-using-appdelegate-lifecycle)
- [UIKit apps using SceneDelegate lifecycle](#uikit-apps-using-scenedelegate-lifecycle)
- [SwiftUI apps using AppDelegate lifecycle](#swiftui-apps-using-appdelegate-lifecycle)
- [SwiftUI apps using SceneDelegate lifecycle](#swiftui-apps-using-scenedelegate-lifecycle)

### UIKit apps using AppDelegate lifecycle {#uikit-apps-using-appdelegate-lifecycle}

Update your AppDelegate to implement iOS direct deep linking methods.

<Tabs>
<Tab title="Swift" sync="swift">

```swift
// AppDelegate.swift

// Receive universal link when app is installed
// and link opens app from "not running"
// or background state.
func application(
  _ application: UIApplication,
  continue userActivity: NSUserActivity,
  restorationHandler: @escaping ([UIUserActivityRestoring]?) -> Void
) -> Bool {
  guard userActivity.activityType == NSUserActivityTypeBrowsingWeb,
        let incomingLink = userActivity.webpageURL else { return true }

  // Send deep link to Adjust's servers for attribution.
  // If short branded link, receive long link.
  // Otherwise, receive original link.
  Adjust.processDeeplink(incomingLink) { resolvedLinkString in
    guard let resolvedLink = URL(string: resolvedLinkString) else { return }

    // TO DO: Handle the resolved link by parsing its components
    // (example: path, query parameters) and
    // navigating to the appropriate screen.
  }

  return true
}

// Receive app scheme deep link when app is installed
// and link opens app from "not running",
// background, or foreground state.
func application(
  _ application: UIApplication,
  open incomingLink: URL,
  options: [UIApplication.OpenURLOptionsKey: Any] = [:]
) -> Bool {
  // Send deep link to Adjust's servers for attribution.
  // If short branded link, receive long link.
  // Otherwise, receive original link.
  Adjust.processDeeplink(incomingLink) { resolvedLinkString in
    guard let resolvedLink = URL(string: resolvedLinkString) else { return }

    // TO DO: Handle the resolved link by parsing its components
    // (example: path, query parameters) and
    // navigating to the appropriate screen.
  }
  return true
}
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
// AppDelegate.m

// Receive universal link when app is installed
// and link opens app from "not running"
// or background state.
- (BOOL)application:(UIApplication *)application
    continueUserActivity:(NSUserActivity *)userActivity
      restorationHandler:
          (void (^)(NSArray<id<UIUserActivityRestoring>> *_Nullable))
              restorationHandler {
  // Check if it's a web browsing activity
  if (![userActivity.activityType
          isEqualToString:NSUserActivityTypeBrowsingWeb])
    return YES;

  // Check if there's a valid URL
  NSURL *incomingLink = userActivity.webpageURL;
  if (!incomingLink) return YES;

  // Send deep link to Adjust's servers for attribution.
  // If short branded link, receive long link.
  // Otherwise, receive original link.
  [Adjust processDeeplink:incomingLink
        completionHandler:^(NSString *resolvedLinkString) {
          NSURL *resolvedLink = [NSURL URLWithString:resolvedLinkString];
          if (!resolvedLink) return;

          // TO DO: Handle the resolved link by parsing its components
          // (example: path, query parameters) and
          // navigating to the appropriate screen.
        }];

  return YES;
}

// Receive app scheme deep link when app is installed
// and link opens app from "not running",
// background, or foreground state.
- (BOOL)application:(UIApplication *)app
            openURL:(NSURL *)incomingLink
            options:
                (NSDictionary<UIApplicationOpenURLOptionsKey, id> *)options {
  // Send deep link to Adjust's servers for attribution.
  // If short branded link, receive long link.
  // Otherwise, receive original link.
  [Adjust processDeeplink:incomingLink
        completionHandler:^(NSString *resolvedLinkString) {
          NSURL *resolvedLink = [NSURL URLWithString:resolvedLinkString];
          if (!resolvedLink) return;

          // TO DO: Handle the resolved link by parsing its components
          // (example: path, query parameters) and
          // navigating to the appropriate screen.
        }];
  return YES;
}
```

</Tab>
</Tabs>

### UIKit apps using SceneDelegate lifecycle {#uikit-apps-using-scenedelegate-lifecycle}

Update your SceneDelegate to implement iOS direct deep linking methods.

<Tabs>
<Tab title="Swift" sync="swift">

```swift
// SceneDelegate.swift

// Receive universal link or app scheme deep link when app is installed
// and link opens app from "not running" state.
func scene(
    _ scene: UIScene,
    willConnectTo session: UISceneSession,
    options connectionOptions: UIScene.ConnectionOptions
) {
    // Receive incoming universal link
    if let userActivity = connectionOptions.userActivities.first,
       userActivity.activityType == NSUserActivityTypeBrowsingWeb,
       let incomingLink = userActivity.webpageURL {
        // Send deep link to Adjust's servers for attribution.
        // If short branded link, receive long link.
        // Otherwise, receive original link.
        Adjust.processDeeplink(incomingLink) { resolvedLinkString in
            guard let resolvedLink = URL(string: resolvedLinkString) else { return }

            // TO DO: Handle the resolved link by parsing its components
            // (example: path, query parameters) and
            // navigating to the appropriate screen.
        }
        return
    }

    // Receive incoming app scheme deep link
    guard let incomingLink = connectionOptions.urlContexts.first?.url else { return }

    // Send deep link to Adjust's servers for attribution.
    // If short branded link, receive long link.
    // Otherwise, receive original link.
    Adjust.processDeeplink(incomingLink) { resolvedLinkString in
        guard let resolvedLink = URL(string: resolvedLinkString) else { return }

        // TO DO: Handle the resolved link by parsing its components
        // (example: path, query parameters) and
        // navigating to the appropriate screen.
    }
}

// Receive universal link when app is installed
// and link opens app from background state.
func scene(_ scene: UIScene, continue userActivity: NSUserActivity) {
    guard userActivity.activityType == NSUserActivityTypeBrowsingWeb,
          let incomingLink = userActivity.webpageURL else { return }

    // Send deep link to Adjust's servers for attribution.
    // If short branded link, receive long link.
    // Otherwise, receive original link.
    Adjust.processDeeplink(incomingLink) { resolvedLinkString in
        guard let resolvedLink = URL(string: resolvedLinkString) else { return }

        // TO DO: Handle the resolved link by parsing its components
        // (example: path, query parameters) and
        // navigating to the appropriate screen.
    }
}

// Receive app scheme deep link when app is installed
// and link opens app from background
// or foreground state.
func scene(
  _ scene: UIScene,
  openURLContexts URLContexts: Set<UIOpenURLContext>
) {
  guard let incomingLink = URLContexts.first?.url else { return }

  // Send deep link to Adjust's servers for attribution.
  // If short branded link, receive long link.
  // Otherwise, receive original link.
  Adjust.processDeeplink(incomingLink) { resolvedLinkString in
    guard let resolvedLink = URL(string: resolvedLinkString) else { return }

    // TO DO: Handle the resolved link by parsing its components
    // (example: path, query parameters) and
    // navigating to the appropriate screen.
  }
}
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
// SceneDelegate.m

// Receive universal link or app scheme deep link when app is installed
// and link opens app from "not running" state.
- (void)scene:(UIScene *)scene
    willConnectToSession:(UISceneSession *)session
                 options:(UISceneConnectionOptions *)connectionOptions {
  // Receive universal link
  if (connectionOptions.userActivities.count > 0) {
    NSUserActivity *userActivity =
        connectionOptions.userActivities.allObjects.firstObject;
    if ([userActivity.activityType
            isEqualToString:NSUserActivityTypeBrowsingWeb] &&
        userActivity.webpageURL) {
      NSURL *incomingLink = userActivity.webpageURL;
      // Send deep link to Adjust's servers for attribution.
      // If short branded link, receive long link.
      // Otherwise, receive original link.
      [Adjust processDeeplink:incomingLink
            completionHandler:^(NSString *resolvedLinkString) {
              NSURL *resolvedLink = [NSURL URLWithString:resolvedLinkString];
              if (!resolvedLink) return;

              // TO DO: Handle the resolved link by parsing its components
              // (example: path, query parameters) and
              // navigating to the appropriate screen.
            }];
      return;
    }
  }

  // Receive app scheme deep link
  if (connectionOptions.URLContexts.count == 0) return;

  UIOpenURLContext *urlContext =
      connectionOptions.URLContexts.allObjects.firstObject;
  NSURL *incomingLink = urlContext.URL;

  // Send deep link to Adjust's servers for attribution.
  // If short branded link, receive long link.
  // Otherwise, receive original link.
  [Adjust processDeeplink:incomingLink
        completionHandler:^(NSString *resolvedLinkString) {
          NSURL *resolvedLink = [NSURL URLWithString:resolvedLinkString];
          if (!resolvedLink) return;

          // TO DO: Handle the resolved link by parsing its components
          // (example: path, query parameters) and
          // navigating to the appropriate screen.
        }];
}

// Receive universal link when app is installed
// and link opens app from background state.
- (void)scene:(UIScene *)scene
    continueUserActivity:(NSUserActivity *)userActivity {
  // Check if it's a web browsing activity
  if (![userActivity.activityType
          isEqualToString:NSUserActivityTypeBrowsingWeb])
    return;

  // Check if there's a valid URL
  NSURL *incomingLink = userActivity.webpageURL;
  if (!incomingLink) return;

  // Send deep link to Adjust's servers for attribution.
  // If short branded link, receive long link.
  // Otherwise, receive original link.
  [Adjust processDeeplink:incomingLink
        completionHandler:^(NSString *resolvedLinkString) {
          NSURL *resolvedLink = [NSURL URLWithString:resolvedLinkString];
          if (!resolvedLink) return;

          // TO DO: Handle the resolved link by parsing its components
          // (example: path, query parameters) and
          // navigating to the appropriate screen.
        }];
}

// Receive app scheme deep link when app is installed
// and link opens app from background
// or foreground state.
- (void)scene:(UIScene *)scene
    openURLContexts:(NSSet<UIOpenURLContext *> *)URLContexts {
  // Check if we have any URL contexts
  UIOpenURLContext *urlContext = URLContexts.allObjects.firstObject;
  if (!urlContext) return;

  // Check if the URL is valid
  NSURL *incomingLink = urlContext.URL;
  if (!incomingLink) return;

  // Send deep link to Adjust's servers for attribution.
  // If short branded link, receive long link.
  // Otherwise, receive original link.
  [Adjust processDeeplink:incomingLink
        completionHandler:^(NSString *resolvedLinkString) {
          NSURL *resolvedLink = [NSURL URLWithString:resolvedLinkString];
          if (!resolvedLink) return;

          // TO DO: Handle the resolved link by parsing its components
          // (example: path, query parameters) and
          // navigating to the appropriate screen.
        }];
}
```

</Tab>
</Tabs>

### SwiftUI apps using AppDelegate lifecycle {#swiftui-apps-using-appdelegate-lifecycle}

If you haven't already done so, create an `AppDelegate.swift` file in your project's main directory and reference it in your main application file, as shown in the example `App.swift` file below. This is required to handle app lifecycle events and Adjust SDK integration. Also, implement the `onOpenURL` SwiftUI modifier, which receives universal links and app scheme deep links when the app is installed.

<Tabs>
<Tab title="Swift" sync="swift">

```swift
// App.swift

import Adjust
import SwiftUI

@main
struct MyApp: App {
  @UIApplicationDelegateAdaptor(AppDelegate.self) var appDelegate

  var body: some Scene {
    WindowGroup {
      ContentView()
        // Receive universal link or app scheme deep link when app is installed
        // and link opens app from "not running",
        // background, or foreground state.
        .onOpenURL { incomingLink in
          // Send deep link to Adjust's servers for attribution.
          // If short branded link, receive long link.
          // Otherwise, receive original link.
          Adjust.processDeeplink(incomingLink) { resolvedLinkString in
            guard let resolvedLink = URL(string: resolvedLinkString) else { return }

            // TO DO: Handle the resolved link by parsing its components
            // (example: path, query parameters) and
            // navigating to the appropriate screen.
          }
        }
    }
  }
}
```

</Tab>
</Tabs>

### SwiftUI apps using SceneDelegate lifecycle {#swiftui-apps-using-scenedelegate-lifecycle}

Follow the instructions in the [SwiftUI apps using AppDelegate lifecycle](#swiftui-apps-using-appdelegate-lifecycle) section. The `onOpenURL` SwiftUI modifier receives universal links and app scheme deep links when the app is installed and the link opens the app from a background or foreground state.

In addition, implement the `scene(_:willConnectTo:options:)` method from the [UIKit apps using SceneDelegate lifecycle](#uikit-apps-using-scenedelegate-lifecycle) section. This method receives universal links and app scheme deep links when the app is installed and the link opens the app from a "not running" state.
