src/content/docs/en/sdk/ios/v5/features/deep-links/direct.mdx
---
title: Set up direct deep linking
description: Configure direct deep linking for your app.
slug: en/sdk/ios/features/deep-links/direct
sidebar-position: 2
versions:
   - label: v5
     value: v5
     default: true
   - label: v4
     value: v4
redirects:
   v4: /en/sdk/ios/v4/features/deep-links/direct
---

When a user with your app installed clicks an Adjust link, direct deep linking ensures they're taken directly to specific content within the app.

## Setup {#setup}

iOS provides several methods for receiving direct deep links depending on your app's implementation.

Within these methods, you'll use Adjust's `processAndResolve(_:withCompletionHandler:)` method, which does the following:

- Records attribution from deep link clicks
- Resolves [short branded links](https://help.adjust.com/en/article/short-branded-links) to their long branded link equivalent
- Passes through all other links as is (Adjust long branded links, other universal links, app scheme deep links)

Your app can then handle the resolved link by parsing it and navigating to the appropriate screen.

<CodeBlock title="Method signature">
   
```objc 
+ (void)processAndResolveDeeplink:(nonnull ADJDeeplink *)deeplink
            withCompletionHandler:(nonnull ADJResolvedDeeplinkBlock)completion;
```

</CodeBlock>

## Important Implementation Notes {#important-implementation-notes}

Follow these deep link handling best practices:

1. **Link Handling Requirements**

   - Your app should handle Adjust branded links (`brandname.go.link`) and your universal links (`example.com`) identically. If your app uses a domain allowlist, ensure your Adjust branded domain is included. For example, both of the following should navigate to the same screen:

      - Adjust branded link: `https://brandname.go.link/summer-clothes?promo=beach`
      - Universal link: `https://example.com/summer-clothes?promo=beach`

   - Your app should handle Adjust branded links and app scheme deep links identically. In cases where iOS doesn't support universal links, Adjust converts them to the equivalent app scheme format. For example, both of the following should navigate to the same screen:
      - Adjust branded link: `https://brandname.go.link/summer-clothes?promo=beach`
      - App scheme deep link: `example://summer-clothes?promo=beach`

2. **App State Considerations**

   - Ensure your app correctly handles links when they open the app from any state: "not running," background, or, if applicable, foreground.
   - Consider storing deep links if they can't be handled immediately, such as when the user isn't yet authenticated, and process them once the app is ready for navigation.

3. **In-App Navigation**
   - When an app tries to open its own universal links by calling `UIApplication.open(_:options:completionHandler:)` or SwiftUI’s `openURL`, iOS opens them in Safari instead of the app. To use these methods for internal navigation, you can only pass app scheme deep links to them. Alternatively, you can place universal links within your app and use your deep link handling logic to parse them and navigate to the appropriate screen.

## Implementation {#implementation}

Use the implementation that aligns with your app's structure:

- [UIKit apps using AppDelegate lifecycle](#uikit-apps-using-appdelegate-lifecycle)
- [UIKit apps using SceneDelegate lifecycle](#uikit-apps-using-scenedelegate-lifecycle)
- [SwiftUI apps using AppDelegate lifecycle](#swiftui-apps-using-appdelegate-lifecycle)
- [SwiftUI apps using SceneDelegate lifecycle](#swiftui-apps-using-scenedelegate-lifecycle)

### UIKit apps using AppDelegate lifecycle {#uikit-apps-using-appdelegate-lifecycle}

Update your AppDelegate to implement iOS direct deep linking methods.

<Tabs>
<Tab title="Swift" sync="swift">

```swift
// AppDelegate.swift

// Receive universal link when app is installed
// and link opens app from "not running"
// or background state.
func application(
  _ application: UIApplication,
  continue userActivity: NSUserActivity,
  restorationHandler: @escaping ([UIUserActivityRestoring]?) -> Void
) -> Bool {
  guard userActivity.activityType == NSUserActivityTypeBrowsingWeb,
    let incomingLink = userActivity.webpageURL
  else { return true }

  // Create deep link object
  guard let deeplink = ADJDeeplink(deeplink: incomingLink) else { return }

  // Send deep link to Adjust's servers for attribution.
  // If short branded link, receive long link.
  // Otherwise, receive original link.
  Adjust.processAndResolve(deeplink) { resolvedLink in
    // Handle failure if resolvedLink is nil
    guard let resolvedLink = resolvedLink else { return }

    // TO DO: Handle resolvedLink by parsing its components
    // (example: path, query parameters) and
    // navigating to the appropriate screen.
  }

  return true
}

// Receive app scheme deep link when app is installed
// and link opens app from "not running",
// background, or foreground state.
func application(
  _ application: UIApplication,
  open incomingLink: URL,
  options: [UIApplication.OpenURLOptionsKey: Any] = [:]
) -> Bool {
  // Create deep link object
  guard let deeplink = ADJDeeplink(deeplink: incomingLink) else { return }

  // Send deep link to Adjust's servers for attribution.
  // If short branded link, receive long link.
  // Otherwise, receive original link.
  Adjust.processAndResolve(deeplink) { resolvedLink in
    // Handle failure if resolvedLink is nil
    guard let resolvedLink = resolvedLink else { return }

    // TO DO: Handle resolvedLink by parsing its components
    // (example: path, query parameters) and
    // navigating to the appropriate screen.
  }
  return true
}
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
// AppDelegate.m

// Receive universal link when app is installed
// and link opens app from "not running"
// or background state.
- (BOOL)application:(UIApplication *)application
    continueUserActivity:(NSUserActivity *)userActivity
      restorationHandler:
          (void (^)(NSArray<id<UIUserActivityRestoring>> *_Nullable))
              restorationHandler {
  // Check if it's a web browsing activity
  if (![userActivity.activityType
          isEqualToString:NSUserActivityTypeBrowsingWeb])
    return YES;

  // Check if there's a valid URL
  NSURL *incomingLink = userActivity.webpageURL;
  if (!incomingLink) return YES;

  // Create deep link object
  ADJDeeplink *deeplink = [[ADJDeeplink alloc] initWithDeeplink:incomingLink];
  if (!deeplink) return YES;

  // Send deep link to Adjust's servers for attribution.
  // If short branded link, receive long link.
  // Otherwise, receive original link.
  [Adjust processAndResolveDeeplink:deeplink
              withCompletionHandler:^(NSString *resolvedLink) {
                // Handle failure if resolvedLink is nil
                if (!resolvedLink) return;

                // TO DO: Handle resolvedLink by parsing its components
                // (example: path, query parameters) and
                // navigating to the appropriate screen.
              }];

  return YES;
}

// Receive app scheme deep link when app is installed
// and link opens app from "not running",
// background, or foreground state.
- (BOOL)application:(UIApplication *)application
            openURL:(NSURL *)incomingLink
            options:
                (NSDictionary<UIApplicationOpenURLOptionsKey, id> *)options {
  // Create deep link object
  ADJDeeplink *deeplink = [[ADJDeeplink alloc] initWithDeeplink:incomingLink];
  if (!deeplink) return YES;

  // Send deep link to Adjust's servers for attribution.
  // If short branded link, receive long link.
  // Otherwise, receive original link.
  [Adjust processAndResolveDeeplink:deeplink
              withCompletionHandler:^(NSString *resolvedLink) {
                // Handle failure if resolvedLink is nil
                if (!resolvedLink) return;

                // TO DO: Handle resolvedLink by parsing its components
                // (example: path, query parameters) and
                // navigating to the appropriate screen.
              }];
  return YES;
}
```

</Tab>
</Tabs>

### UIKit apps using SceneDelegate lifecycle {#uikit-apps-using-scenedelegate-lifecycle}

Update your SceneDelegate to implement iOS direct deep linking methods.

<Tabs>
<Tab title="Swift" sync="swift">

```swift
// SceneDelegate.swift

// Receive universal link or app scheme deep link when app is installed
// and link opens app from "not running" state.
func scene(
  _ scene: UIScene,
  willConnectTo session: UISceneSession,
  options connectionOptions: UIScene.ConnectionOptions
) {
  // Receive incoming universal link
  if let userActivity = connectionOptions.userActivities.first,
    userActivity.activityType == NSUserActivityTypeBrowsingWeb,
    let incomingLink = userActivity.webpageURL
  {
    // Create deep link object
    guard let deeplink = ADJDeeplink(deeplink: incomingLink) else { return }

    // Send deep link to Adjust's servers for attribution.
    // If short branded link, receive long link.
    // Otherwise, receive original link.
    Adjust.processAndResolve(deeplink) { resolvedLink in
      // Handle failure if resolvedLink is nil
      guard let resolvedLink = resolvedLink else { return }

      // TO DO: Handle resolvedLink by parsing its components
      // (example: path, query parameters) and
      // navigating to the appropriate screen.
    }
    return
  }

  // Receive incoming app scheme deep link
  guard let incomingLink = connectionOptions.urlContexts.first?.url else { return }

  // Create deep link object
  guard let deeplink = ADJDeeplink(deeplink: incomingLink) else { return }

  // Send deep link to Adjust's servers for attribution.
  // If short branded link, receive long link.
  // Otherwise, receive original link.
  Adjust.processAndResolve(deeplink) { resolvedLink in
    // Handle failure if resolvedLink is nil
    guard let resolvedLink = resolvedLink else { return }

    // TO DO: Handle resolvedLink by parsing its components
    // (example: path, query parameters) and
    // navigating to the appropriate screen.
  }
}

// Receive universal link when app is installed
// and link opens app from background state.
func scene(_ scene: UIScene, continue userActivity: NSUserActivity) {
  guard userActivity.activityType == NSUserActivityTypeBrowsingWeb,
    let incomingLink = userActivity.webpageURL
  else { return }

  // Create deep link object
  guard let deeplink = ADJDeeplink(deeplink: incomingLink) else { return }

  // Send deep link to Adjust's servers for attribution.
  // If short branded link, receive long link.
  // Otherwise, receive original link.
  Adjust.processAndResolve(deeplink) { resolvedLink in
    // Handle failure if resolvedLink is nil
    guard let resolvedLink = resolvedLink else { return }

    // TO DO: Handle resolvedLink by parsing its components
    // (example: path, query parameters) and
    // navigating to the appropriate screen.
  }
}

// Receive app scheme deep link when app is installed
// and link opens app from background
// or foreground state.
func scene(
  _ scene: UIScene,
  openURLContexts URLContexts: Set<UIOpenURLContext>
) {
  guard let incomingLink = URLContexts.first?.url else { return }

  // Create deep link object
  guard let deeplink = ADJDeeplink(deeplink: incomingLink) else { return }

  // Send deep link to Adjust's servers for attribution.
  // If short branded link, receive long link.
  // Otherwise, receive original link.
  Adjust.processAndResolve(deeplink) { resolvedLink in
    // Handle failure if resolvedLink is nil
    guard let resolvedLink = resolvedLink else { return }

    // TO DO: Handle resolvedLink by parsing its components
    // (example: path, query parameters) and
    // navigating to the appropriate screen.
  }
}
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
// SceneDelegate.m

// Receive universal link or app scheme deep link when app is installed
// and link opens app from "not running" state.
- (void)scene:(UIScene *)scene
    willConnectToSession:(UISceneSession *)session
                 options:(UISceneConnectionOptions *)connectionOptions {
  // Receive universal link
  if (connectionOptions.userActivities.count > 0) {
    NSUserActivity *userActivity =
        connectionOptions.userActivities.allObjects.firstObject;
    if ([userActivity.activityType
            isEqualToString:NSUserActivityTypeBrowsingWeb] &&
        userActivity.webpageURL) {
      NSURL *incomingLink = userActivity.webpageURL;

      // Create deep link object
      ADJDeeplink *deeplink =
          [[ADJDeeplink alloc] initWithDeeplink:incomingLink];
      if (!deeplink) return;

      // Send deep link to Adjust's servers for attribution.
      // If short branded link, receive long link.
      // Otherwise, receive original link.
      [Adjust processAndResolveDeeplink:deeplink
                  withCompletionHandler:^(NSString *resolvedLink) {
                    // Handle failure if resolvedLink is nil
                    if (!resolvedLink) return;

                    // TO DO: Handle resolvedLink by parsing its components
                    // (example: path, query parameters) and
                    // navigating to the appropriate screen.
                  }];
      return;
    }
  }

  // Receive app scheme deep link
  if (connectionOptions.URLContexts.count == 0) return;

  UIOpenURLContext *urlContext =
      connectionOptions.URLContexts.allObjects.firstObject;
  NSURL *incomingLink = urlContext.URL;

  // Create deep link object
  ADJDeeplink *deeplink = [[ADJDeeplink alloc] initWithDeeplink:incomingLink];
  if (!deeplink) return;

  // Send deep link to Adjust's servers for attribution.
  // If short branded link, receive long link.
  // Otherwise, receive original link.
  [Adjust processAndResolveDeeplink:deeplink
              withCompletionHandler:^(NSString *resolvedLink) {
                // Handle failure if resolvedLink is nil
                if (!resolvedLink) return;

                // TO DO: Handle resolvedLink by parsing its components
                // (example: path, query parameters) and
                // navigating to the appropriate screen.
              }];
}

// Receive universal link when app is installed
// and link opens app from background state.
- (void)scene:(UIScene *)scene
    continueUserActivity:(NSUserActivity *)userActivity {
  // Check if it's a web browsing activity
  if (![userActivity.activityType
          isEqualToString:NSUserActivityTypeBrowsingWeb])
    return;

  // Check if there's a valid URL
  NSURL *incomingLink = userActivity.webpageURL;
  if (!incomingLink) return;

  // Create deep link object
  ADJDeeplink *deeplink = [[ADJDeeplink alloc] initWithDeeplink:incomingLink];
  if (!deeplink) return;

  // Send deep link to Adjust's servers for attribution.
  // If short branded link, receive long link.
  // Otherwise, receive original link.
  [Adjust processAndResolveDeeplink:deeplink
              withCompletionHandler:^(NSString *resolvedLink) {
                // Handle failure if resolvedLink is nil
                if (!resolvedLink) return;

                // TO DO: Handle resolvedLink by parsing its components
                // (example: path, query parameters) and
                // navigating to the appropriate screen.
              }];
}

// Receive app scheme deep link when app is installed
// and link opens app from background
// or foreground state.
- (void)scene:(UIScene *)scene
    openURLContexts:(NSSet<UIOpenURLContext *> *)URLContexts {
  // Check if we have any URL contexts
  UIOpenURLContext *urlContext = URLContexts.allObjects.firstObject;
  if (!urlContext) return;

  // Check if the URL is valid
  NSURL *incomingLink = urlContext.URL;
  if (!incomingLink) return;

  // Create deep link object
  ADJDeeplink *deeplink = [[ADJDeeplink alloc] initWithDeeplink:incomingLink];
  if (!deeplink) return;

  // Send deep link to Adjust's servers for attribution.
  // If short branded link, receive long link.
  // Otherwise, receive original link.
  [Adjust processAndResolveDeeplink:deeplink
              withCompletionHandler:^(NSString *resolvedLink) {
                // Handle failure if resolvedLink is nil
                if (!resolvedLink) return;

                // TO DO: Handle resolvedLink by parsing its components
                // (example: path, query parameters) and
                // navigating to the appropriate screen.
              }];
}
```

</Tab>
</Tabs>

### SwiftUI apps using AppDelegate lifecycle {#swiftui-apps-using-appdelegate-lifecycle}

If you haven't already done so, create an `AppDelegate.swift` file in your project's main directory and reference it in your main application file, as shown in the example `App.swift` file below. This is required to handle app lifecycle events and Adjust SDK integration. Also, implement the `onOpenURL` SwiftUI modifier, which receives universal links and app scheme deep links when the app is installed.

<Tabs>
<Tab title="Swift" sync="swift">

```swift
// App.swift

import AdjustSdk
import SwiftUI

@main
struct MyApp: App {
  @UIApplicationDelegateAdaptor(AppDelegate.self) var appDelegate

  var body: some Scene {
    WindowGroup {
      ContentView()
        // Receive universal link or app scheme deep link when app is installed
        // and link opens app from "not running",
        // background, or foreground state.
        .onOpenURL { incomingLink in
          // Create deep link object
          guard let deeplink = ADJDeeplink(deeplink: incomingLink) else { return }

          // Send deep link to Adjust's servers for attribution.
          // If short branded link, receive long link.
          // Otherwise, receive original link.
          Adjust.processAndResolve(deeplink) { resolvedLink in
            // Handle failure if resolvedLink is nil
            guard let resolvedLink = resolvedLink else { return }

            // TO DO: Handle resolvedLink by parsing its components
            // (example: path, query parameters) and
            // navigating to the appropriate screen.
          }
        }
    }
  }
}
```

</Tab>
</Tabs>

### SwiftUI apps using SceneDelegate lifecycle {#swiftui-apps-using-scenedelegate-lifecycle}

Follow the instructions in the [SwiftUI apps using AppDelegate lifecycle](#swiftui-apps-using-appdelegate-lifecycle) section. The `onOpenURL` SwiftUI modifier receives universal links and app scheme deep links when the app is installed and the link opens the app from a background or foreground state.

In addition, implement the `scene(_:willConnectTo:options:)` method from the [UIKit apps using SceneDelegate lifecycle](#uikit-apps-using-scenedelegate-lifecycle) section. This method receives universal links and app scheme deep links when the app is installed and the link opens the app from a "not running" state.

## Handling Deeplinks with Referrer {#handling-deeplinks-with-referrer}

An optional referrer URL used to track source of the deep link/app open for better attribution/reattribution and deep linking.
E.g. For channels like SEO / Organic Search, Adjust links are not directly used. If the client's root domain has Universal Links/Android App Links implemented and triggers an app opening, For such channels, we may have to rely on signals coming from the referrer URL to attribute/reattribute users.

#### Set up a Referrer URL

<Tabs>
<Tab title="Swift" sync="swift">

```swift
func application(_ application: UIApplication,
                continue userActivity: NSUserActivity,
                restorationHandler: @escaping ([UIUserActivityRestoring]?) -> Void) -> Bool {

    guard userActivity.activityType == NSUserActivityTypeBrowsingWeb,
        let url = userActivity.webpageURL else { return false }

    if let deeplink = ADJDeeplink(deeplink: url) {
        // If referrer URL is available, add it to the deeplink object
        if let referrer = URL(string: "https://example.com") {
            deeplink.setReferrer(referrer)
        }
        // Send deeplink and referrer to Adjust's servers
        Adjust.processDeeplink(deeplink)
        return true
    }
    return false
}

```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
- (BOOL)application:(UIApplication *)application
            continueUserActivity:(NSUserActivity *)userActivity
    restorationHandler:(void (^)(NSArray<id<UIUserActivityRestoring>> *restorableObjects))restorationHandler {
    
    if ([userActivity.activityType isEqualToString:NSUserActivityTypeBrowsingWeb]) {
        NSURL *url = userActivity.webpageURL;
        if (url) {
            ADJDeeplink *deeplink = [[ADJDeeplink alloc] initWithDeeplink:url];
            if (deeplink) {
                NSURL *referrer = [NSURL URLWithString:@"https://example.com"];
                // If referrer URL is available, add it to the deeplink object
                if (referrer) {
                    [deeplink setReferrer:referrer];
                }
                // Send deeplink and referrer to Adjust's servers
                [Adjust processDeeplink:deeplink];
            }
            return YES;
        }
    }
    return NO;
}

```

</Tab>
</Tabs>
